// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing analytics sale chart component Should match snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="tremor-Card-root relative w-full text-left rounded-tremor-default bg-tremor-background ring-tremor-ring shadow-tremor-card dark:ring-dark-tremor-ring dark:shadow-dark-tremor-card border-tremor-brand dark:border-dark-tremor-brand p-0 border-none ring-0 dark:bg-dark-tremor-primary"
      >
        <div
          class="tremor-Flex-root flex w-full flex-row justify-between items-center"
        >
          <p
            class="text-tremor-title p-6 pb-2.5 text-lg font-semibold text-primary dark:text-dark-primary tracking-[0.0075em]"
          >
            Top Selling Products
          </p>
        </div>
        <div
          class="tremor-Flex-root flex w-full flex-row justify-start items-start pb-2"
        >
          <div
            class="tremor-Table-root overflow-auto w-full"
          >
            <table
              class="tremor-Table-table w-full tabular-nums text-tremor-default text-tremor-content dark:text-dark-tremor-content"
            >
              <thead
                class="tremor-TableHead-root text-left text-tremor-content dark:text-dark-tremor-content"
              >
                <tr
                  class="tremor-TableRow-row border-0 border-b border-gray-100 dark:border-grayish"
                >
                  <th
                    class="tremor-TableHeaderCell-root sticky whitespace-nowrap text-left top-0 py-3.5 px-6 pt-2 pb-3 text-tremor-content dark:text-dark-tremor-content-title text-[10.4px] leading-[17px] tracking-[0.2px] font-bold opacity-70 uppercase"
                  >
                    product
                  </th>
                  <th
                    class="tremor-TableHeaderCell-root sticky whitespace-nowrap text-left top-0 px-6 py-2 text-tremor-content dark:text-dark-tremor-content-title text-[10.4px] leading-[17px] tracking-[0.2px] font-bold opacity-70 uppercase"
                  >
                    value
                  </th>
                  <th
                    class="tremor-TableHeaderCell-root sticky whitespace-nowrap top-0 px-6 py-2 text-tremor-content dark:text-dark-tremor-content-title text-[10.4px] leading-[17px] tracking-[0.2px] font-bold opacity-70 uppercase text-center"
                  >
                    ads spent
                  </th>
                  <th
                    class="tremor-TableHeaderCell-root sticky whitespace-nowrap top-0 px-6 py-2 text-tremor-content dark:text-dark-tremor-content-title text-[10.4px] leading-[17px] tracking-[0.2px] font-bold opacity-70 uppercase text-center"
                  >
                    refunds
                  </th>
                </tr>
              </thead>
              <tbody
                class="tremor-TableBody-root align-top overflow-x-auto divide-y divide-tremor-border dark:divide-dark-tremor-border last:!border-transparent"
              >
                <tr
                  class="tremor-TableRow-row border-0 border-b !border-gray-100 dark:!border-grayish"
                >
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
                  >
                    <div
                      class="tremor-Flex-root flex w-full flex-row justify-between items-center"
                    >
                      <div
                        class="tremor-Flex-root flex flex-row justify-between items-center w-16 mr-3 md:mr-1"
                      >
                        <img
                          alt="Nike v22 Running"
                          class="rounded-full"
                          data-nimg="1"
                          decoding="async"
                          fetchpriority="high"
                          height="48"
                          src="http://localhost/_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fblue-shoe.webp&w=96&q=75"
                          srcset="/_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fblue-shoe.webp&w=48&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fblue-shoe.webp&w=96&q=75 2x"
                          style="color: transparent;"
                          width="48"
                        />
                      </div>
                      <div
                        class="tremor-Flex-root flex w-full flex-col justify-between items-start"
                      >
                        <p
                          class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title font-bold leading-[21px] tracking-[0.4px] truncate max-w-[300px] lg:max-w-[400px] xl:max-w-[500px] 2xl:max-w-[800px] min-w-[200px] product-name"
                        >
                          Nike v22 Running
                        </p>
                        <p
                          class="text-tremor-default text-secondary dark:text-secondary leading-[21px] tracking-[0.4px] product-orders"
                        >
                          <span
                            class="text-few"
                          >
                            8,232
                          </span>
                           
                          orders
                        </p>
                      </div>
                    </div>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
                  >
                    <p
                      class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-value"
                    >
                      <span>
                        $130,992.00
                      </span>
                    </p>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-6 py-3 text-center"
                  >
                    <p
                      class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-ads-spent"
                    >
                      <span>
                        $130,992.00
                      </span>
                    </p>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
                  >
                    <div
                      class="tremor-Flex-root flex w-full flex-row justify-center items-center"
                    >
                      <p
                        class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-refunds"
                      >
                        13
                      </p>
                      <svg
                        class="text-xl text-few"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                        />
                      </svg>
                    </div>
                  </td>
                </tr>
                <tr
                  class="tremor-TableRow-row border-0 border-b !border-gray-100 dark:!border-grayish"
                >
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
                  >
                    <div
                      class="tremor-Flex-root flex w-full flex-row justify-between items-center"
                    >
                      <div
                        class="tremor-Flex-root flex flex-row justify-between items-center w-16 mr-3 md:mr-1"
                      >
                        <img
                          alt="Business Kit (Mug + Notebook)"
                          class="rounded-full"
                          data-nimg="1"
                          decoding="async"
                          fetchpriority="high"
                          height="48"
                          src="http://localhost/_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fblack-mug.webp&w=96&q=75"
                          srcset="/_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fblack-mug.webp&w=48&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fblack-mug.webp&w=96&q=75 2x"
                          style="color: transparent;"
                          width="48"
                        />
                      </div>
                      <div
                        class="tremor-Flex-root flex w-full flex-col justify-between items-start"
                      >
                        <p
                          class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title font-bold leading-[21px] tracking-[0.4px] truncate max-w-[300px] lg:max-w-[400px] xl:max-w-[500px] 2xl:max-w-[800px] min-w-[200px] product-name"
                        >
                          Business Kit (Mug + Notebook)
                        </p>
                        <p
                          class="text-tremor-default text-secondary dark:text-secondary leading-[21px] tracking-[0.4px] product-orders"
                        >
                          <span
                            class="text-few"
                          >
                            12,821
                          </span>
                           
                          orders
                        </p>
                      </div>
                    </div>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
                  >
                    <p
                      class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-value"
                    >
                      <span>
                        $80,250.00
                      </span>
                    </p>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-6 py-3 text-center"
                  >
                    <p
                      class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-ads-spent"
                    >
                      <span>
                        $80,250.00
                      </span>
                    </p>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
                  >
                    <div
                      class="tremor-Flex-root flex w-full flex-row justify-center items-center"
                    >
                      <p
                        class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-refunds"
                      >
                        40
                      </p>
                      <svg
                        class="text-xl text-[#F44335]"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                        />
                      </svg>
                    </div>
                  </td>
                </tr>
                <tr
                  class="tremor-TableRow-row border-0 border-b !border-gray-100 dark:!border-grayish"
                >
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
                  >
                    <div
                      class="tremor-Flex-root flex w-full flex-row justify-between items-center"
                    >
                      <div
                        class="tremor-Flex-root flex flex-row justify-between items-center w-16 mr-3 md:mr-1"
                      >
                        <img
                          alt="Black Chair"
                          class="rounded-full"
                          data-nimg="1"
                          decoding="async"
                          fetchpriority="high"
                          height="48"
                          src="http://localhost/_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fblack-chair.webp&w=96&q=75"
                          srcset="/_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fblack-chair.webp&w=48&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fblack-chair.webp&w=96&q=75 2x"
                          style="color: transparent;"
                          width="48"
                        />
                      </div>
                      <div
                        class="tremor-Flex-root flex w-full flex-col justify-between items-start"
                      >
                        <p
                          class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title font-bold leading-[21px] tracking-[0.4px] truncate max-w-[300px] lg:max-w-[400px] xl:max-w-[500px] 2xl:max-w-[800px] min-w-[200px] product-name"
                        >
                          Black Chair
                        </p>
                        <p
                          class="text-tremor-default text-secondary dark:text-secondary leading-[21px] tracking-[0.4px] product-orders"
                        >
                          <span
                            class="text-few"
                          >
                            2,421
                          </span>
                           
                          orders
                        </p>
                      </div>
                    </div>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
                  >
                    <p
                      class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-value"
                    >
                      <span>
                        $40,600.00
                      </span>
                    </p>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-6 py-3 text-center"
                  >
                    <p
                      class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-ads-spent"
                    >
                      <span>
                        $40,600.00
                      </span>
                    </p>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
                  >
                    <div
                      class="tremor-Flex-root flex w-full flex-row justify-center items-center"
                    >
                      <p
                        class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-refunds"
                      >
                        54
                      </p>
                      <svg
                        class="text-xl text-few"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                        />
                      </svg>
                    </div>
                  </td>
                </tr>
                <tr
                  class="tremor-TableRow-row border-0 border-b !border-gray-100 dark:!border-grayish"
                >
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
                  >
                    <div
                      class="tremor-Flex-root flex w-full flex-row justify-between items-center"
                    >
                      <div
                        class="tremor-Flex-root flex flex-row justify-between items-center w-16 mr-3 md:mr-1"
                      >
                        <img
                          alt="Wireless Charger"
                          class="rounded-full"
                          data-nimg="1"
                          decoding="async"
                          fetchpriority="high"
                          height="48"
                          src="http://localhost/_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fbang-sound.webp&w=96&q=75"
                          srcset="/_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fbang-sound.webp&w=48&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fbang-sound.webp&w=96&q=75 2x"
                          style="color: transparent;"
                          width="48"
                        />
                      </div>
                      <div
                        class="tremor-Flex-root flex w-full flex-col justify-between items-start"
                      >
                        <p
                          class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title font-bold leading-[21px] tracking-[0.4px] truncate max-w-[300px] lg:max-w-[400px] xl:max-w-[500px] 2xl:max-w-[800px] min-w-[200px] product-name"
                        >
                          Wireless Charger
                        </p>
                        <p
                          class="text-tremor-default text-secondary dark:text-secondary leading-[21px] tracking-[0.4px] product-orders"
                        >
                          <span
                            class="text-few"
                          >
                            5,921
                          </span>
                           
                          orders
                        </p>
                      </div>
                    </div>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
                  >
                    <p
                      class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-value"
                    >
                      <span>
                        $91,300.00
                      </span>
                    </p>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-6 py-3 text-center"
                  >
                    <p
                      class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-ads-spent"
                    >
                      <span>
                        $91,300.00
                      </span>
                    </p>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
                  >
                    <div
                      class="tremor-Flex-root flex w-full flex-row justify-center items-center"
                    >
                      <p
                        class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-refunds"
                      >
                        5
                      </p>
                      <svg
                        class="text-xl text-[#F44335]"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                        />
                      </svg>
                    </div>
                  </td>
                </tr>
                <tr
                  class="tremor-TableRow-row border-0 border-b !border-gray-100 dark:!border-grayish"
                >
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
                  >
                    <div
                      class="tremor-Flex-root flex w-full flex-row justify-between items-center"
                    >
                      <div
                        class="tremor-Flex-root flex flex-row justify-between items-center w-16 mr-3 md:mr-1"
                      >
                        <img
                          alt="Mountain Trip Kit (Camera + Backpack)"
                          class="rounded-full"
                          data-nimg="1"
                          decoding="async"
                          fetchpriority="high"
                          height="48"
                          src="http://localhost/_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fphoto-tools.webp&w=96&q=75"
                          srcset="/_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fphoto-tools.webp&w=48&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fphoto-tools.webp&w=96&q=75 2x"
                          style="color: transparent;"
                          width="48"
                        />
                      </div>
                      <div
                        class="tremor-Flex-root flex w-full flex-col justify-between items-start"
                      >
                        <p
                          class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title font-bold leading-[21px] tracking-[0.4px] truncate max-w-[300px] lg:max-w-[400px] xl:max-w-[500px] 2xl:max-w-[800px] min-w-[200px] product-name"
                        >
                          Mountain Trip Kit (Camera + Backpack)
                        </p>
                        <p
                          class="text-tremor-default text-secondary dark:text-secondary leading-[21px] tracking-[0.4px] product-orders"
                        >
                          <span
                            class="text-few"
                          >
                            921
                          </span>
                           
                          orders
                        </p>
                      </div>
                    </div>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
                  >
                    <p
                      class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-value"
                    >
                      <span>
                        $140,925.00
                      </span>
                    </p>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-6 py-3 text-center"
                  >
                    <p
                      class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-ads-spent"
                    >
                      <span>
                        $140,925.00
                      </span>
                    </p>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
                  >
                    <div
                      class="tremor-Flex-root flex w-full flex-row justify-center items-center"
                    >
                      <p
                        class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-refunds"
                      >
                        121
                      </p>
                      <svg
                        class="text-xl text-few"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                        />
                      </svg>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="tremor-Card-root relative w-full text-left rounded-tremor-default bg-tremor-background ring-tremor-ring shadow-tremor-card dark:ring-dark-tremor-ring dark:shadow-dark-tremor-card border-tremor-brand dark:border-dark-tremor-brand p-0 border-none ring-0 dark:bg-dark-tremor-primary"
    >
      <div
        class="tremor-Flex-root flex w-full flex-row justify-between items-center"
      >
        <p
          class="text-tremor-title p-6 pb-2.5 text-lg font-semibold text-primary dark:text-dark-primary tracking-[0.0075em]"
        >
          Top Selling Products
        </p>
      </div>
      <div
        class="tremor-Flex-root flex w-full flex-row justify-start items-start pb-2"
      >
        <div
          class="tremor-Table-root overflow-auto w-full"
        >
          <table
            class="tremor-Table-table w-full tabular-nums text-tremor-default text-tremor-content dark:text-dark-tremor-content"
          >
            <thead
              class="tremor-TableHead-root text-left text-tremor-content dark:text-dark-tremor-content"
            >
              <tr
                class="tremor-TableRow-row border-0 border-b border-gray-100 dark:border-grayish"
              >
                <th
                  class="tremor-TableHeaderCell-root sticky whitespace-nowrap text-left top-0 py-3.5 px-6 pt-2 pb-3 text-tremor-content dark:text-dark-tremor-content-title text-[10.4px] leading-[17px] tracking-[0.2px] font-bold opacity-70 uppercase"
                >
                  product
                </th>
                <th
                  class="tremor-TableHeaderCell-root sticky whitespace-nowrap text-left top-0 px-6 py-2 text-tremor-content dark:text-dark-tremor-content-title text-[10.4px] leading-[17px] tracking-[0.2px] font-bold opacity-70 uppercase"
                >
                  value
                </th>
                <th
                  class="tremor-TableHeaderCell-root sticky whitespace-nowrap top-0 px-6 py-2 text-tremor-content dark:text-dark-tremor-content-title text-[10.4px] leading-[17px] tracking-[0.2px] font-bold opacity-70 uppercase text-center"
                >
                  ads spent
                </th>
                <th
                  class="tremor-TableHeaderCell-root sticky whitespace-nowrap top-0 px-6 py-2 text-tremor-content dark:text-dark-tremor-content-title text-[10.4px] leading-[17px] tracking-[0.2px] font-bold opacity-70 uppercase text-center"
                >
                  refunds
                </th>
              </tr>
            </thead>
            <tbody
              class="tremor-TableBody-root align-top overflow-x-auto divide-y divide-tremor-border dark:divide-dark-tremor-border last:!border-transparent"
            >
              <tr
                class="tremor-TableRow-row border-0 border-b !border-gray-100 dark:!border-grayish"
              >
                <td
                  class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
                >
                  <div
                    class="tremor-Flex-root flex w-full flex-row justify-between items-center"
                  >
                    <div
                      class="tremor-Flex-root flex flex-row justify-between items-center w-16 mr-3 md:mr-1"
                    >
                      <img
                        alt="Nike v22 Running"
                        class="rounded-full"
                        data-nimg="1"
                        decoding="async"
                        fetchpriority="high"
                        height="48"
                        src="http://localhost/_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fblue-shoe.webp&w=96&q=75"
                        srcset="/_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fblue-shoe.webp&w=48&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fblue-shoe.webp&w=96&q=75 2x"
                        style="color: transparent;"
                        width="48"
                      />
                    </div>
                    <div
                      class="tremor-Flex-root flex w-full flex-col justify-between items-start"
                    >
                      <p
                        class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title font-bold leading-[21px] tracking-[0.4px] truncate max-w-[300px] lg:max-w-[400px] xl:max-w-[500px] 2xl:max-w-[800px] min-w-[200px] product-name"
                      >
                        Nike v22 Running
                      </p>
                      <p
                        class="text-tremor-default text-secondary dark:text-secondary leading-[21px] tracking-[0.4px] product-orders"
                      >
                        <span
                          class="text-few"
                        >
                          8,232
                        </span>
                         
                        orders
                      </p>
                    </div>
                  </div>
                </td>
                <td
                  class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
                >
                  <p
                    class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-value"
                  >
                    <span>
                      $130,992.00
                    </span>
                  </p>
                </td>
                <td
                  class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-6 py-3 text-center"
                >
                  <p
                    class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-ads-spent"
                  >
                    <span>
                      $130,992.00
                    </span>
                  </p>
                </td>
                <td
                  class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
                >
                  <div
                    class="tremor-Flex-root flex w-full flex-row justify-center items-center"
                  >
                    <p
                      class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-refunds"
                    >
                      13
                    </p>
                    <svg
                      class="text-xl text-few"
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                      <path
                        d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                      />
                    </svg>
                  </div>
                </td>
              </tr>
              <tr
                class="tremor-TableRow-row border-0 border-b !border-gray-100 dark:!border-grayish"
              >
                <td
                  class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
                >
                  <div
                    class="tremor-Flex-root flex w-full flex-row justify-between items-center"
                  >
                    <div
                      class="tremor-Flex-root flex flex-row justify-between items-center w-16 mr-3 md:mr-1"
                    >
                      <img
                        alt="Business Kit (Mug + Notebook)"
                        class="rounded-full"
                        data-nimg="1"
                        decoding="async"
                        fetchpriority="high"
                        height="48"
                        src="http://localhost/_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fblack-mug.webp&w=96&q=75"
                        srcset="/_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fblack-mug.webp&w=48&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fblack-mug.webp&w=96&q=75 2x"
                        style="color: transparent;"
                        width="48"
                      />
                    </div>
                    <div
                      class="tremor-Flex-root flex w-full flex-col justify-between items-start"
                    >
                      <p
                        class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title font-bold leading-[21px] tracking-[0.4px] truncate max-w-[300px] lg:max-w-[400px] xl:max-w-[500px] 2xl:max-w-[800px] min-w-[200px] product-name"
                      >
                        Business Kit (Mug + Notebook)
                      </p>
                      <p
                        class="text-tremor-default text-secondary dark:text-secondary leading-[21px] tracking-[0.4px] product-orders"
                      >
                        <span
                          class="text-few"
                        >
                          12,821
                        </span>
                         
                        orders
                      </p>
                    </div>
                  </div>
                </td>
                <td
                  class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
                >
                  <p
                    class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-value"
                  >
                    <span>
                      $80,250.00
                    </span>
                  </p>
                </td>
                <td
                  class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-6 py-3 text-center"
                >
                  <p
                    class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-ads-spent"
                  >
                    <span>
                      $80,250.00
                    </span>
                  </p>
                </td>
                <td
                  class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
                >
                  <div
                    class="tremor-Flex-root flex w-full flex-row justify-center items-center"
                  >
                    <p
                      class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-refunds"
                    >
                      40
                    </p>
                    <svg
                      class="text-xl text-[#F44335]"
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h24v24H0V0z"
                        fill="none"
                      />
                      <path
                        d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                      />
                    </svg>
                  </div>
                </td>
              </tr>
              <tr
                class="tremor-TableRow-row border-0 border-b !border-gray-100 dark:!border-grayish"
              >
                <td
                  class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
                >
                  <div
                    class="tremor-Flex-root flex w-full flex-row justify-between items-center"
                  >
                    <div
                      class="tremor-Flex-root flex flex-row justify-between items-center w-16 mr-3 md:mr-1"
                    >
                      <img
                        alt="Black Chair"
                        class="rounded-full"
                        data-nimg="1"
                        decoding="async"
                        fetchpriority="high"
                        height="48"
                        src="http://localhost/_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fblack-chair.webp&w=96&q=75"
                        srcset="/_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fblack-chair.webp&w=48&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fblack-chair.webp&w=96&q=75 2x"
                        style="color: transparent;"
                        width="48"
                      />
                    </div>
                    <div
                      class="tremor-Flex-root flex w-full flex-col justify-between items-start"
                    >
                      <p
                        class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title font-bold leading-[21px] tracking-[0.4px] truncate max-w-[300px] lg:max-w-[400px] xl:max-w-[500px] 2xl:max-w-[800px] min-w-[200px] product-name"
                      >
                        Black Chair
                      </p>
                      <p
                        class="text-tremor-default text-secondary dark:text-secondary leading-[21px] tracking-[0.4px] product-orders"
                      >
                        <span
                          class="text-few"
                        >
                          2,421
                        </span>
                         
                        orders
                      </p>
                    </div>
                  </div>
                </td>
                <td
                  class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
                >
                  <p
                    class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-value"
                  >
                    <span>
                      $40,600.00
                    </span>
                  </p>
                </td>
                <td
                  class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-6 py-3 text-center"
                >
                  <p
                    class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-ads-spent"
                  >
                    <span>
                      $40,600.00
                    </span>
                  </p>
                </td>
                <td
                  class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
                >
                  <div
                    class="tremor-Flex-root flex w-full flex-row justify-center items-center"
                  >
                    <p
                      class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-refunds"
                    >
                      54
                    </p>
                    <svg
                      class="text-xl text-few"
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                      <path
                        d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                      />
                    </svg>
                  </div>
                </td>
              </tr>
              <tr
                class="tremor-TableRow-row border-0 border-b !border-gray-100 dark:!border-grayish"
              >
                <td
                  class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
                >
                  <div
                    class="tremor-Flex-root flex w-full flex-row justify-between items-center"
                  >
                    <div
                      class="tremor-Flex-root flex flex-row justify-between items-center w-16 mr-3 md:mr-1"
                    >
                      <img
                        alt="Wireless Charger"
                        class="rounded-full"
                        data-nimg="1"
                        decoding="async"
                        fetchpriority="high"
                        height="48"
                        src="http://localhost/_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fbang-sound.webp&w=96&q=75"
                        srcset="/_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fbang-sound.webp&w=48&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fbang-sound.webp&w=96&q=75 2x"
                        style="color: transparent;"
                        width="48"
                      />
                    </div>
                    <div
                      class="tremor-Flex-root flex w-full flex-col justify-between items-start"
                    >
                      <p
                        class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title font-bold leading-[21px] tracking-[0.4px] truncate max-w-[300px] lg:max-w-[400px] xl:max-w-[500px] 2xl:max-w-[800px] min-w-[200px] product-name"
                      >
                        Wireless Charger
                      </p>
                      <p
                        class="text-tremor-default text-secondary dark:text-secondary leading-[21px] tracking-[0.4px] product-orders"
                      >
                        <span
                          class="text-few"
                        >
                          5,921
                        </span>
                         
                        orders
                      </p>
                    </div>
                  </div>
                </td>
                <td
                  class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
                >
                  <p
                    class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-value"
                  >
                    <span>
                      $91,300.00
                    </span>
                  </p>
                </td>
                <td
                  class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-6 py-3 text-center"
                >
                  <p
                    class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-ads-spent"
                  >
                    <span>
                      $91,300.00
                    </span>
                  </p>
                </td>
                <td
                  class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
                >
                  <div
                    class="tremor-Flex-root flex w-full flex-row justify-center items-center"
                  >
                    <p
                      class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-refunds"
                    >
                      5
                    </p>
                    <svg
                      class="text-xl text-[#F44335]"
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h24v24H0V0z"
                        fill="none"
                      />
                      <path
                        d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                      />
                    </svg>
                  </div>
                </td>
              </tr>
              <tr
                class="tremor-TableRow-row border-0 border-b !border-gray-100 dark:!border-grayish"
              >
                <td
                  class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
                >
                  <div
                    class="tremor-Flex-root flex w-full flex-row justify-between items-center"
                  >
                    <div
                      class="tremor-Flex-root flex flex-row justify-between items-center w-16 mr-3 md:mr-1"
                    >
                      <img
                        alt="Mountain Trip Kit (Camera + Backpack)"
                        class="rounded-full"
                        data-nimg="1"
                        decoding="async"
                        fetchpriority="high"
                        height="48"
                        src="http://localhost/_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fphoto-tools.webp&w=96&q=75"
                        srcset="/_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fphoto-tools.webp&w=48&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fphoto-tools.webp&w=96&q=75 2x"
                        style="color: transparent;"
                        width="48"
                      />
                    </div>
                    <div
                      class="tremor-Flex-root flex w-full flex-col justify-between items-start"
                    >
                      <p
                        class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title font-bold leading-[21px] tracking-[0.4px] truncate max-w-[300px] lg:max-w-[400px] xl:max-w-[500px] 2xl:max-w-[800px] min-w-[200px] product-name"
                      >
                        Mountain Trip Kit (Camera + Backpack)
                      </p>
                      <p
                        class="text-tremor-default text-secondary dark:text-secondary leading-[21px] tracking-[0.4px] product-orders"
                      >
                        <span
                          class="text-few"
                        >
                          921
                        </span>
                         
                        orders
                      </p>
                    </div>
                  </div>
                </td>
                <td
                  class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
                >
                  <p
                    class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-value"
                  >
                    <span>
                      $140,925.00
                    </span>
                  </p>
                </td>
                <td
                  class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-6 py-3 text-center"
                >
                  <p
                    class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-ads-spent"
                  >
                    <span>
                      $140,925.00
                    </span>
                  </p>
                </td>
                <td
                  class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
                >
                  <div
                    class="tremor-Flex-root flex w-full flex-row justify-center items-center"
                  >
                    <p
                      class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-refunds"
                    >
                      121
                    </p>
                    <svg
                      class="text-xl text-few"
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                      <path
                        d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                      />
                    </svg>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Testing analytics sale chart component testing component top selling products render 1`] = `
<div>
  <div
    class="tremor-Card-root relative w-full text-left rounded-tremor-default bg-tremor-background ring-tremor-ring shadow-tremor-card dark:ring-dark-tremor-ring dark:shadow-dark-tremor-card border-tremor-brand dark:border-dark-tremor-brand p-0 border-none ring-0 dark:bg-dark-tremor-primary"
  >
    <div
      class="tremor-Flex-root flex w-full flex-row justify-between items-center"
    >
      <p
        class="text-tremor-title p-6 pb-2.5 text-lg font-semibold text-primary dark:text-dark-primary tracking-[0.0075em]"
      >
        Top Selling Products
      </p>
    </div>
    <div
      class="tremor-Flex-root flex w-full flex-row justify-start items-start pb-2"
    >
      <div
        class="tremor-Table-root overflow-auto w-full"
      >
        <table
          class="tremor-Table-table w-full tabular-nums text-tremor-default text-tremor-content dark:text-dark-tremor-content"
        >
          <thead
            class="tremor-TableHead-root text-left text-tremor-content dark:text-dark-tremor-content"
          >
            <tr
              class="tremor-TableRow-row border-0 border-b border-gray-100 dark:border-grayish"
            >
              <th
                class="tremor-TableHeaderCell-root sticky whitespace-nowrap text-left top-0 py-3.5 px-6 pt-2 pb-3 text-tremor-content dark:text-dark-tremor-content-title text-[10.4px] leading-[17px] tracking-[0.2px] font-bold opacity-70 uppercase"
              >
                product
              </th>
              <th
                class="tremor-TableHeaderCell-root sticky whitespace-nowrap text-left top-0 px-6 py-2 text-tremor-content dark:text-dark-tremor-content-title text-[10.4px] leading-[17px] tracking-[0.2px] font-bold opacity-70 uppercase"
              >
                value
              </th>
              <th
                class="tremor-TableHeaderCell-root sticky whitespace-nowrap top-0 px-6 py-2 text-tremor-content dark:text-dark-tremor-content-title text-[10.4px] leading-[17px] tracking-[0.2px] font-bold opacity-70 uppercase text-center"
              >
                ads spent
              </th>
              <th
                class="tremor-TableHeaderCell-root sticky whitespace-nowrap top-0 px-6 py-2 text-tremor-content dark:text-dark-tremor-content-title text-[10.4px] leading-[17px] tracking-[0.2px] font-bold opacity-70 uppercase text-center"
              >
                refunds
              </th>
            </tr>
          </thead>
          <tbody
            class="tremor-TableBody-root align-top overflow-x-auto divide-y divide-tremor-border dark:divide-dark-tremor-border last:!border-transparent"
          >
            <tr
              class="tremor-TableRow-row border-0 border-b !border-gray-100 dark:!border-grayish"
            >
              <td
                class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
              >
                <div
                  class="tremor-Flex-root flex w-full flex-row justify-between items-center"
                >
                  <div
                    class="tremor-Flex-root flex flex-row justify-between items-center w-16 mr-3 md:mr-1"
                  >
                    <img
                      alt="Nike v22 Running"
                      class="rounded-full"
                      data-nimg="1"
                      decoding="async"
                      fetchpriority="high"
                      height="48"
                      src="http://localhost/_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fblue-shoe.webp&w=96&q=75"
                      srcset="/_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fblue-shoe.webp&w=48&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fblue-shoe.webp&w=96&q=75 2x"
                      style="color: transparent;"
                      width="48"
                    />
                  </div>
                  <div
                    class="tremor-Flex-root flex w-full flex-col justify-between items-start"
                  >
                    <p
                      class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title font-bold leading-[21px] tracking-[0.4px] truncate max-w-[300px] lg:max-w-[400px] xl:max-w-[500px] 2xl:max-w-[800px] min-w-[200px] product-name"
                    >
                      Nike v22 Running
                    </p>
                    <p
                      class="text-tremor-default text-secondary dark:text-secondary leading-[21px] tracking-[0.4px] product-orders"
                    >
                      <span
                        class="text-few"
                      >
                        8,232
                      </span>
                       
                      orders
                    </p>
                  </div>
                </div>
              </td>
              <td
                class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
              >
                <p
                  class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-value"
                >
                  <span>
                    $130,992.00
                  </span>
                </p>
              </td>
              <td
                class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-6 py-3 text-center"
              >
                <p
                  class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-ads-spent"
                >
                  <span>
                    $130,992.00
                  </span>
                </p>
              </td>
              <td
                class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
              >
                <div
                  class="tremor-Flex-root flex w-full flex-row justify-center items-center"
                >
                  <p
                    class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-refunds"
                  >
                    13
                  </p>
                  <svg
                    class="text-xl text-few"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                    />
                  </svg>
                </div>
              </td>
            </tr>
            <tr
              class="tremor-TableRow-row border-0 border-b !border-gray-100 dark:!border-grayish"
            >
              <td
                class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
              >
                <div
                  class="tremor-Flex-root flex w-full flex-row justify-between items-center"
                >
                  <div
                    class="tremor-Flex-root flex flex-row justify-between items-center w-16 mr-3 md:mr-1"
                  >
                    <img
                      alt="Business Kit (Mug + Notebook)"
                      class="rounded-full"
                      data-nimg="1"
                      decoding="async"
                      fetchpriority="high"
                      height="48"
                      src="http://localhost/_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fblack-mug.webp&w=96&q=75"
                      srcset="/_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fblack-mug.webp&w=48&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fblack-mug.webp&w=96&q=75 2x"
                      style="color: transparent;"
                      width="48"
                    />
                  </div>
                  <div
                    class="tremor-Flex-root flex w-full flex-col justify-between items-start"
                  >
                    <p
                      class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title font-bold leading-[21px] tracking-[0.4px] truncate max-w-[300px] lg:max-w-[400px] xl:max-w-[500px] 2xl:max-w-[800px] min-w-[200px] product-name"
                    >
                      Business Kit (Mug + Notebook)
                    </p>
                    <p
                      class="text-tremor-default text-secondary dark:text-secondary leading-[21px] tracking-[0.4px] product-orders"
                    >
                      <span
                        class="text-few"
                      >
                        12,821
                      </span>
                       
                      orders
                    </p>
                  </div>
                </div>
              </td>
              <td
                class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
              >
                <p
                  class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-value"
                >
                  <span>
                    $80,250.00
                  </span>
                </p>
              </td>
              <td
                class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-6 py-3 text-center"
              >
                <p
                  class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-ads-spent"
                >
                  <span>
                    $80,250.00
                  </span>
                </p>
              </td>
              <td
                class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
              >
                <div
                  class="tremor-Flex-root flex w-full flex-row justify-center items-center"
                >
                  <p
                    class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-refunds"
                  >
                    40
                  </p>
                  <svg
                    class="text-xl text-[#F44335]"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0V0z"
                      fill="none"
                    />
                    <path
                      d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                    />
                  </svg>
                </div>
              </td>
            </tr>
            <tr
              class="tremor-TableRow-row border-0 border-b !border-gray-100 dark:!border-grayish"
            >
              <td
                class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
              >
                <div
                  class="tremor-Flex-root flex w-full flex-row justify-between items-center"
                >
                  <div
                    class="tremor-Flex-root flex flex-row justify-between items-center w-16 mr-3 md:mr-1"
                  >
                    <img
                      alt="Black Chair"
                      class="rounded-full"
                      data-nimg="1"
                      decoding="async"
                      fetchpriority="high"
                      height="48"
                      src="http://localhost/_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fblack-chair.webp&w=96&q=75"
                      srcset="/_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fblack-chair.webp&w=48&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fblack-chair.webp&w=96&q=75 2x"
                      style="color: transparent;"
                      width="48"
                    />
                  </div>
                  <div
                    class="tremor-Flex-root flex w-full flex-col justify-between items-start"
                  >
                    <p
                      class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title font-bold leading-[21px] tracking-[0.4px] truncate max-w-[300px] lg:max-w-[400px] xl:max-w-[500px] 2xl:max-w-[800px] min-w-[200px] product-name"
                    >
                      Black Chair
                    </p>
                    <p
                      class="text-tremor-default text-secondary dark:text-secondary leading-[21px] tracking-[0.4px] product-orders"
                    >
                      <span
                        class="text-few"
                      >
                        2,421
                      </span>
                       
                      orders
                    </p>
                  </div>
                </div>
              </td>
              <td
                class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
              >
                <p
                  class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-value"
                >
                  <span>
                    $40,600.00
                  </span>
                </p>
              </td>
              <td
                class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-6 py-3 text-center"
              >
                <p
                  class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-ads-spent"
                >
                  <span>
                    $40,600.00
                  </span>
                </p>
              </td>
              <td
                class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
              >
                <div
                  class="tremor-Flex-root flex w-full flex-row justify-center items-center"
                >
                  <p
                    class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-refunds"
                  >
                    54
                  </p>
                  <svg
                    class="text-xl text-few"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                    />
                  </svg>
                </div>
              </td>
            </tr>
            <tr
              class="tremor-TableRow-row border-0 border-b !border-gray-100 dark:!border-grayish"
            >
              <td
                class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
              >
                <div
                  class="tremor-Flex-root flex w-full flex-row justify-between items-center"
                >
                  <div
                    class="tremor-Flex-root flex flex-row justify-between items-center w-16 mr-3 md:mr-1"
                  >
                    <img
                      alt="Wireless Charger"
                      class="rounded-full"
                      data-nimg="1"
                      decoding="async"
                      fetchpriority="high"
                      height="48"
                      src="http://localhost/_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fbang-sound.webp&w=96&q=75"
                      srcset="/_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fbang-sound.webp&w=48&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fbang-sound.webp&w=96&q=75 2x"
                      style="color: transparent;"
                      width="48"
                    />
                  </div>
                  <div
                    class="tremor-Flex-root flex w-full flex-col justify-between items-start"
                  >
                    <p
                      class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title font-bold leading-[21px] tracking-[0.4px] truncate max-w-[300px] lg:max-w-[400px] xl:max-w-[500px] 2xl:max-w-[800px] min-w-[200px] product-name"
                    >
                      Wireless Charger
                    </p>
                    <p
                      class="text-tremor-default text-secondary dark:text-secondary leading-[21px] tracking-[0.4px] product-orders"
                    >
                      <span
                        class="text-few"
                      >
                        5,921
                      </span>
                       
                      orders
                    </p>
                  </div>
                </div>
              </td>
              <td
                class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
              >
                <p
                  class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-value"
                >
                  <span>
                    $91,300.00
                  </span>
                </p>
              </td>
              <td
                class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-6 py-3 text-center"
              >
                <p
                  class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-ads-spent"
                >
                  <span>
                    $91,300.00
                  </span>
                </p>
              </td>
              <td
                class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
              >
                <div
                  class="tremor-Flex-root flex w-full flex-row justify-center items-center"
                >
                  <p
                    class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-refunds"
                  >
                    5
                  </p>
                  <svg
                    class="text-xl text-[#F44335]"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0V0z"
                      fill="none"
                    />
                    <path
                      d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                    />
                  </svg>
                </div>
              </td>
            </tr>
            <tr
              class="tremor-TableRow-row border-0 border-b !border-gray-100 dark:!border-grayish"
            >
              <td
                class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
              >
                <div
                  class="tremor-Flex-root flex w-full flex-row justify-between items-center"
                >
                  <div
                    class="tremor-Flex-root flex flex-row justify-between items-center w-16 mr-3 md:mr-1"
                  >
                    <img
                      alt="Mountain Trip Kit (Camera + Backpack)"
                      class="rounded-full"
                      data-nimg="1"
                      decoding="async"
                      fetchpriority="high"
                      height="48"
                      src="http://localhost/_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fphoto-tools.webp&w=96&q=75"
                      srcset="/_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fphoto-tools.webp&w=48&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fproducts%2Fphoto-tools.webp&w=96&q=75 2x"
                      style="color: transparent;"
                      width="48"
                    />
                  </div>
                  <div
                    class="tremor-Flex-root flex w-full flex-col justify-between items-start"
                  >
                    <p
                      class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title font-bold leading-[21px] tracking-[0.4px] truncate max-w-[300px] lg:max-w-[400px] xl:max-w-[500px] 2xl:max-w-[800px] min-w-[200px] product-name"
                    >
                      Mountain Trip Kit (Camera + Backpack)
                    </p>
                    <p
                      class="text-tremor-default text-secondary dark:text-secondary leading-[21px] tracking-[0.4px] product-orders"
                    >
                      <span
                        class="text-few"
                      >
                        921
                      </span>
                       
                      orders
                    </p>
                  </div>
                </div>
              </td>
              <td
                class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
              >
                <p
                  class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-value"
                >
                  <span>
                    $140,925.00
                  </span>
                </p>
              </td>
              <td
                class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-6 py-3 text-center"
              >
                <p
                  class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-ads-spent"
                >
                  <span>
                    $140,925.00
                  </span>
                </p>
              </td>
              <td
                class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-6 py-3"
              >
                <div
                  class="tremor-Flex-root flex w-full flex-row justify-center items-center"
                >
                  <p
                    class="text-tremor-default text-tremor-content dark:text-dark-tremor-content-romance leading-[21px] tracking-[0.4px] product-refunds"
                  >
                    121
                  </p>
                  <svg
                    class="text-xl text-few"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                    />
                  </svg>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;
